# Chessable-OCaml

./: README.md
chessable_ocaml/: chessable_ocaml.opam  dune-project
chessable_ocaml/lib/: _repertoire.mli  board.ml  dune  helper.ml  parser.ml  parser.mli  repertoire.ml  repertoire.mli
chessable_ocaml/src/: chessable.ml  dune
chessable_ocaml/test/: dune
chessable_ocaml/tests/: dune  tests.ml
data/: NiktheFist_zipjiang_2022.pgn  NiktheFist_zipjiang_trunc.pgn  NiktheFist_zipjiang_trunc_simple.pgn  debug_repertoire.json  debug_repertoire_ii.json
interface/: bsconfig.json  package-lock.json  package.json
interface/src/: App.bs.js  App.js  App.res  Board.bs.js  Board.res  Notation.bs.js  Notation.res  Test.bs.js  Test.res  index.css
mock/: route.md  usage.md
