(lang dune 3.4)

(name chessable_ocaml)

(generate_opam_files true)

(source
 (github zipjiang/Chessable-OCaml))

(authors "Zhengping Jiang")

(maintainers "Zhengping Jiang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name chessable_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
