(lang dune 3.4)
(generate_opam_files true)
(authors "Zhengping Jiang")
(maintainers "zjiang31@jh.edu")
(package
 (name chessable_ocaml)
 (synopsis "An OCaml library for reviewing Chess Openings.")
 (description "An Ocaml backend for Chess reviewing library")
 (depends
  (ounit2 (> 2.2.6))
  (core (> 0.15.0))
  (ppx_deriving (> 5.2.0))
  (ppx_sexp_conv (>= 0.15.0))
  (ppx_deriving_yojson (> 3.6.1))
  (lwt (>= 5.6.1))
  (lwt_ppx (> 2.1.0))
  (ppx_let (>= v0.15.0))
  (core_unix (>= v0.15.2))
  (dream (>= 1.0.0))
  (ppx_let (>= v0.15.0))
  (bisect_ppx (>= 2.8.1))
 )
)
